Fixed layout issue in items (regression)

--- a/src/routes/TFT/components/MasterDetail/MasterDetail.module.css
+++ b/src/routes/TFT/components/MasterDetail/MasterDetail.module.css
@@ -80,6 +80,7 @@
   font-size: 16px;
   padding: 6px;
   outline: 0;
+  width: 100%;
 }
 .searchBoxClear {
   border: 0;
